--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,7 @@
   <body>
     <!-- this is the start of content -->
     <h1>
-      Set up a blog.
+      Set up a blog. Test
     </h1>
    
     <form id="blog-form">
